# balls-counter

./: .gitignore  README.md  balls-counter.env  balls-counter.service  config.example.json  pyproject.toml
.claude/: settings.json
scripts/: annotate.py  annotate_frame.py  annotate_geometry.py  annotate_scores.py  benchmark.py  benchmark_ml.py  check_syntax.py  check_threshold.py  compare_results.py  count_balls.py  count_field_zones.py  crop_goal.py  crop_samples.py  deploy.py  deploy_outlet.py  diagnose_signal.py  draw_geometry.py  draw_line.py  draw_roi.py  draw_zones.py  extract_signals.py  generate_yolo_labels.py  grab_frame.py  grab_frames.py  grab_frames2.py  grab_snapshot.py  labels_to_yolo.py  live_field_count.py  red_drop_frames.py  red_drop_wide.py  show_windows.py  signal_trace.py  snapshot.py  snapshot_rtsp.py  sweep_params.py  test_blue_approaches.py  test_blue_cooldown.py  test_blue_disappear.py  test_cuvid.py  test_detect.py  (+28 more)
src/ball_counter/: __main__.py  apriltag.py  buffer.py  calibrate.py  clips.py  config.py  counter.py  detector.py  main.py  ml_detector.py  pfms.py  roi_detector.py  stream.py  tracker.py  web.py  yolo_detector.py
src/ball_counter/detectors/: __init__.py  protocol.py
