[project]
name = "ball-counter"
version = "0.1.0"
description = "Count ball scoring events in FIRST Robotics competitions using computer vision"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.9",
    "numpy>=1.26",
]

[project.scripts]
ball-counter = "ball_counter.main:main"

[project.optional-dependencies]
dev = [
    "ruff",
]
web = [
    "fastapi>=0.111",
    "uvicorn>=0.29",
]
ml = [
    "torch>=2.0",
    "ultralytics>=8.4.27",
]
